修复后台模版css和图片的绝对路径

--- a/Application/Admin/View/Index/main.html
+++ b/Application/Admin/View/Index/main.html
@@ -4,8 +4,8 @@
 <title>ECSHOP 管理中心</title>
 <meta name="robots" content="noindex, nofollow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="./Styles/general.css" rel="stylesheet" type="text/css" />
-<link href="./Styles/main.css" rel="stylesheet" type="text/css" />
+<link href="__PUBLIC__/Admin/Styles/general.css" rel="stylesheet" type="text/css" />
+<link href="__PUBLIC__/Admin/Styles/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <h1>
