--- a/Application/Admin/View/Index/menu.html
+++ b/Application/Admin/View/Index/menu.html
@@ -3,7 +3,7 @@
 <head>
 <title>ECSHOP Menu</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="./Styles/general.css" rel="stylesheet" type="text/css" />
+<link href="__PUBLIC__/Admin/Styles/general.css" rel="stylesheet" type="text/css" />
 
 <style type="text/css">
 body {
@@ -79,15 +79,15 @@ body {
   color:#EB8A3D;
 }
 .explode {
-  background:url(./Images/menu_minus.gif) no-repeat 0px 3px;
+  background:url(__PUBLIC__/Admin/Images/menu_minus.gif) no-repeat 0px 3px;
   font-weight:bold;
 }
 .collapse {
-  background:url(./Images/menu_plus.gif) no-repeat 0px 3px;
+  background:url(__PUBLIC__/Admin/Images/menu_plus.gif) no-repeat 0px 3px;
   font-weight:bold;
 }
 .menu-item {
-  background:url(./Images/menu_arrow.gif) no-repeat 0px 3px;
+  background:url(__PUBLIC__/Admin/Images/menu_arrow.gif) no-repeat 0px 3px;
   font-weight:normal;
 }
 #help-title {
@@ -114,7 +114,7 @@ body {
     <p>
         <span style="float:right; padding:3px 5px;" >
             <a href="javascript:toggleCollapse();">
-                <img id="toggleImg" src="./Images/menu_minus.gif" width="9" height="9" border="0" alt="闭合" />
+                <img id="toggleImg" src="__PUBLIC__/Admin/Images/menu_minus.gif" width="9" height="9" border="0" alt="闭合" />
             </a>
         </span>
         <span class="tab-front" id="menu-tab">菜单</span>
@@ -182,7 +182,7 @@ body {
             }
         }
         collapse = !collapse;
-        document.getElementById('toggleImg').src = collapse ? './Images/menu_minus.gif' : './Images/menu_plus.gif';
+        document.getElementById('toggleImg').src = collapse ? '__PUBLIC__/Admin/Images/menu_minus.gif' : '__PUBLIC__/Admin/Images/menu_plus.gif';
         document.getElementById('toggleImg').alt = collapse ? collapse_all : expand_all;
     }
 
@@ -302,7 +302,7 @@ body {
                         }
                     }
                 }
-                document.getElementById('toggleImg').src = collapse ? './Images/menu_minus.gif' : './Images/menu_plus.gif';
+                document.getElementById('toggleImg').src = collapse ? '__PUBLIC__/Admin/Images/menu_minus.gif' : '__PUBLIC__/Admin/Images/menu_plus.gif';
                 document.getElementById('toggleImg').alt = collapse ? collapse_all : expand_all;
             }
         }
