--- a/Public/Admin/Styles/main.css
+++ b/Public/Admin/Styles/main.css
@@ -851,3 +851,7 @@ em, cite, th {
 .cloud_close a{}
 .cloud_close img{ position:absolute; right:10px; top:8px; border:none}
 .Start315{border: 1px solid #CC0000; background: #ffffcc; padding: 10px; margin-bottom: 5px;}
+
+/*翻页*/
+#page-table a{padding:5px;border: 1px solid #F00;margin: 5px;}
+#page-table span.current{padding: 5px;background: #F00;margin: 5px;color: #FFF;font-weight: bold;}
