后台商品修改，修改图片尚有问题

--- a/Application/Admin/View/Goods/goodsList.html
+++ b/Application/Admin/View/Goods/goodsList.html
@@ -75,7 +75,7 @@
                 <td align="center"><?php echo $v['is_on_sale']; ?></td>
                 <td align="center"><?php echo $v['addtime']; ?></td>
                 <td align="center">
-                    <a href="">修改</a>
+                    <a href="<?php echo U('goodsEdit?id='.$v['id']); ?>">修改</a>
                     <a href="">删除</a>
                 </td>
             </tr>
