修复了修改图片的错误,拼写错误

--- a/Application/Admin/View/Goods/goodsList.html
+++ b/Application/Admin/View/Goods/goodsList.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>
-    <span class="action-span"><a href="__GROUP__/Goods/goodsAdd">添加新商品</a></span>
+    <span class="action-span"><a href="__CONTROLLER__/goodsAdd">添加新商品</a></span>
     <span class="action-span1"><a href="__GROUP__">ECSHOP 管理中心</a></span>
     <span id="search_id" class="action-span1"> - 商品列表 </span>
     <div style="clear:both"></div>
