--- a/Application/Admin/View/Goods/goodsEdit.html
+++ b/Application/Admin/View/Goods/goodsEdit.html
@@ -11,7 +11,7 @@
     <span class="action-span"><a href="__GROUP__/Goods/goodsList">商品列表</a>
     </span>
     <span class="action-span1"><a href="__GROUP__">ECSHOP 管理中心</a></span>
-    <span id="search_id" class="action-span1"> - 添加新商品 </span>
+    <span><a href="__CONTROLLER__/goodsAdd">- 添加新商品</a></span>
     <div style="clear:both"></div>
 </h1>
 
