使用布局规划页面

--- a/Application/Admin/View/Goods/goodsList.html
+++ b/Application/Admin/View/Goods/goodsList.html
@@ -1,18 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<title>ECSHOP 管理中心 - 商品列表 </title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="__PUBLIC__/Admin/Styles/general.css" rel="stylesheet" type="text/css" />
-<link href="__PUBLIC__/Admin/Styles/main.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
-<h1>
-    <span class="action-span"><a href="__CONTROLLER__/goodsAdd">添加新商品</a></span>
-    <span class="action-span1"><a href="__GROUP__">ECSHOP 管理中心</a></span>
-    <span id="search_id" class="action-span1"> - 商品列表 </span>
-    <div style="clear:both"></div>
-</h1>
+<!-- 引入布局文件 -->
+<layout name="layout" />
 <!-- 搜索表单 -->
 <div class="form-div">
     <form action="__ACTION__" method="GET" name="searchForm">
