封装处理上传图片函数

--- a/Application/Admin/View/Goods/goodsEdit.html
+++ b/Application/Admin/View/Goods/goodsEdit.html
@@ -19,7 +19,7 @@
                 <tr>
                     <td class="label">LOGO:</td>
                     <td>
-                    <img src="__PUBLIC__/Uploads/<?php echo $data['mid_logo']; ?>" />
+                    <img src="<?php showImage($v['mid_logo']); ?>" />
                     <input type="file" name="logo" size="60" />
                     </td>
                 </tr>
