--- a/Application/Admin/View/Brand/brandList.html
+++ b/Application/Admin/View/Brand/brandList.html
@@ -55,7 +55,7 @@
                 <td><?php showImage($v['logo'],40,40); ?></td>
                 <td align="center">
                     <a href="">修改</a>
-                    <a href="">删除</a>
+                    <a onclick="return confirm('确定要删除吗？');" href="<?php echo U('delete?id='.$v['id']); ?>">删除</a>
                 </td>
             </tr>
             <?php endforeach; ?>
@@ -74,6 +74,7 @@
     </div>
 </form>
 <!-- 引入行高亮显示 -->
+<script type="text/javascript" src="__PUBLIC__/datetimepicker/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="__PUBLIC__/Admin/Js/tron.js"></script>
 </body>
 </html>
