品牌关联查询，显示品牌信息

--- a/Application/Admin/View/Goods/goodsList.html
+++ b/Application/Admin/View/Goods/goodsList.html
@@ -56,7 +56,7 @@
             <?php foreach($data as $k => $v): ?>
             <tr class="tron">
                 <td align="center"><?php echo $v['id']; ?></td>
-                <td align="center"><?php echo $v['brand_id']; ?></td>
+                <td align="center"><?php echo $v['brand_name']; ?></td>
                 <td align="center" class="first-cell"><span><?php echo $v['goods_name']; ?></span></td>
                 <td align="center"><?php showImage($v['sm_logo']); ?></td>
                 <td align="center"><?php echo $v['marker_price']; ?></td>
