美化商品表单

--- a/Application/Admin/View/Goods/goodsAdd.html
+++ b/Application/Admin/View/Goods/goodsAdd.html
@@ -5,20 +5,19 @@
     <div id="tabbar-div">
         <p>
             <span class="tab-front" id="general-tab">通用信息</span>
+            <span class="tab-back">商品描述</span>
+            <span class="tab-back">会员价格</span>
+            <span class="tab-back">商品属性</span>
+            <span class="tab-back">商品相册</span>
         </p>
     </div>
     <div id="tabbody-div">
         <form enctype="multipart/form-data" action="__SELF__" method="post">
-            <table width="90%" id="general-table" align="center">
+            <!-- 基本信息 -->
+            <table width="90%" class="tab_table" align="center">
                 <tr>
                     <td class="label">所在品牌</td>
                     <td>
-<!--                         <select name="brand_id">
-                            <option value="">请选择</option>
-                            <?php foreach ($brandData as $k => $v): ?>
-                                <option value="<?php echo $v['id'] ?>"><?php echo $v['brand_name']; ?></option>
-                            <?php endforeach; ?>
-                        </select> -->
                         <?php buildSelect('brand','brand_id','id','brand_name'); ?>
                     </td>
                 </tr>
@@ -46,27 +45,41 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="label">会员价格：</td>
-                    <td>
-                        <?php foreach ($mlData as $k => $v): ?>
-                            <?php echo $v['level_name']; ?>：¥<input type="text" name="member_price[<?php echo $v['id']; ?>]" size="8" />元<br />
-                        <?php endforeach; ?>
-                    </td>
-                </tr>
-                <tr>
                     <td class="label">是否上架：</td>
                     <td>
                         <input type="radio" name="is_on_sale" value="是" checked="checked" /> 是
                         <input type="radio" name="is_on_sale" value="否"/> 否
                     </td>
                 </tr>
+            </table>
+            <!-- 商品描述 -->
+            <table style="display: none" width="90%" class="tab_table" align="center">
                 <tr>
                     <td class="label">商品简单描述：</td>
                     <td>
                         <textarea id="goods_desc" name="goods_desc"></textarea>
                     </td>
-                </tr>
+                </tr>                
             </table>
+            <!-- 会员价格 -->
+            <table style="display: none" width="90%" class="tab_table" align="center">
+                <tr>
+                    <td class="label">会员价格：</td>
+                    <td>
+                        <?php foreach ($mlData as $k => $v): ?>
+                            <?php echo $v['level_name']; ?>：¥<input type="text" name="member_price[<?php echo $v['id']; ?>]" size="8" />元<br />
+                        <?php endforeach; ?>
+                    </td>
+                </tr>                
+            </table>
+            <!-- 商品属性 -->
+            <table style="display: none" width="90%" class="tab_table" align="center">
+                <tr><td></td></tr>
+            </table>
+            <!-- 商品相册 -->
+            <table style="display: none" width="90%" class="tab_table" align="center">
+                <tr><td></td></tr>
+            </table>                                              
             <div class="button-div">
                 <input type="submit" value=" 确定 " class="button"/>
                 <input type="reset" value=" 重置 " class="button" />
@@ -87,6 +100,22 @@
 UM.getEditor('goods_desc', {
     initialFrameWidth:"90%",
     initialFrameHeight:350
+});
+</script>
+
+<script>
+//切换的代码
+$("#tabbar-div p span").click(function(){
+    //点击的第几个按钮
+    var i = $(this).index();
+    //先隐藏所有的table
+    $(".tab_table").hide();
+    //显示第i个table
+    $(".tab_table").eq(i).show();
+    //先取消原按钮的选中状态
+    $(".tab-front").removeClass("tab-front").addClass("tab-back");
+    //设置当前按钮选中
+    $(this).removeClass("tab-back").addClass("tab-front");
 });
 </script>
 
