AJAX删除相册图片

--- a/Application/Admin/View/Goods/goodsEdit.html
+++ b/Application/Admin/View/Goods/goodsEdit.html
@@ -95,7 +95,7 @@
                         <ul id="old_pic_list">
                             <?php foreach($gpData as $k => $v): ?>
                                 <li>
-                                <input type="button" value="删除" /><br />
+                                <input pic_id="<?php echo $v['id']; ?>" class="btn_del_pic" type="button" value="删除" /><br />
                                 <?php showImage($v['mid_pic'], 150); ?>
                                 </li>
                             <?php endforeach; ?>
@@ -147,3 +147,32 @@ $("#tabbar-div p span").click(function(){
         $("#ul_pic_list").append(file);
     })
 </script>
+
+<script type="text/javascript">
+    //删除图片
+    $(".btn_del_pic").click(function(){
+        if (confirm('确定要删除吗？')) {
+            //先选中删除按钮所在的li标签
+            var li = $(this).parent();
+            //从这个按钮上获取pic_id属性
+            var pid = $(this).attr("pic_id");
+            $.ajax({
+                type : "GET",
+                url : "<?php echo U('ajaxDelPic','',FALSE); ?>/picid/"+pid,
+                success : function(data){
+                    //把图片从页面中删除掉
+                    li.remove();
+                }
+            });
+        }
+    })
+</script>
+
+
+
+
+
+
+
+
+
