--- a/Application/Admin/View/Goods/goodsAdd.html
+++ b/Application/Admin/View/Goods/goodsAdd.html
@@ -16,6 +16,18 @@
             <!-- 基本信息 -->
             <table width="90%" class="tab_table" align="center">
                 <tr>
+                    <td class="label">主分类:</td>
+                    <td>
+                        <select name="cat_id">
+                            <option value="">选择分类</option>
+                            <?php foreach ($catData as $k => $v): ?>
+                                <option value="<?php echo $v['id']; ?>"><?php echo str_repeat('-',8*$v['level']) . $v['cat_name']; ?></option>
+                            <?php endforeach; ?>
+                        </select>
+                        <span class="require-field">*</span>
+                    </td>
+                </tr>
+                <tr>
                     <td class="label">所在品牌</td>
                     <td>
                         <?php buildSelect('brand','brand_id','id','brand_name'); ?>
