--- a/Application/Admin/View/Goods/goodsEdit.html
+++ b/Application/Admin/View/Goods/goodsEdit.html
@@ -19,7 +19,25 @@
     <div id="tabbody-div">
         <form enctype="multipart/form-data" action="__SELF__" method="post">
         <input type="hidden" name="id" value="<?php echo $data['id']; ?>" />
+            <!-- 基本信息 -->
             <table width="90%" id="general-table" align="center" class="tab_table">
+                <tr>
+                    <td class="label">主分类:</td>
+                    <td>
+                        <select name="cat_id">
+                            <option value="">选择分类</option>
+                            <?php foreach ($catData as $k => $v):
+                                if($v[id] == $data['cat_id'])
+                                    $select = 'selected="selected"';
+                                else
+                                    $select = '';
+                            ?> 
+                            <option <?php echo $select; ?> value="<?php echo $v['id']; ?>"><?php echo str_repeat('-',8*$v['level']) . $v['cat_name']; ?></option>
+                            <?php endforeach; ?>
+                        </select>
+                        <span class="require-field">*</span>
+                    </td>
+                </tr>
                 <tr>
                     <td class="label">所在品牌：</td>
                     <td>
