--- a/Application/Admin/View/Goods/goodsList.html
+++ b/Application/Admin/View/Goods/goodsList.html
@@ -4,6 +4,23 @@
 <div class="form-div">
     <form action="__ACTION__" method="GET" name="searchForm">
         <p>
+            分   类:
+            <?php 
+            //接收当前搜索的分类ID
+            $catID = I('get.cat_id'); ?>
+            <select name="cat_id">
+                <option value="">选择分类</option>
+                <?php foreach($catData as $k => $v):
+                    if($v['id'] == $catID)
+                        $select = 'selected="selected"';
+                    else
+                        $select = '';
+                ?>
+                <option <?php echo $select; ?> value="<?php echo $v['id']; ?>"><?php echo str_repeat('-',8*$v['level']) . $v['cat_name']; ?></option>
+                <?php endforeach; ?>
+            </select>
+        </p>
+        <p>
             品   牌:
             <?php buildSelect('brand','brand_id','id','brand_name',I('get.brand_id')); ?>
         </p>
@@ -48,6 +65,7 @@
         <table cellpadding="3" cellspacing="1">
             <tr>
                 <th>编号</th>
+                <th>主分类</th>
                 <th>品牌</th>
                 <th>商品名称</th>
                 <th>LOGO</th>
@@ -60,6 +78,7 @@
             <?php foreach($data as $k => $v): ?>
             <tr class="tron">
                 <td align="center"><?php echo $v['id']; ?></td>
+                <td align="center"><?php echo $v['cat_name']; ?></td>
                 <td align="center"><?php echo $v['brand_name']; ?></td>
                 <td align="center" class="first-cell"><span><?php echo $v['goods_name']; ?></span></td>
                 <td align="center"><?php showImage($v['sm_logo']); ?></td>
