类型和属性表的CRUD操作

--- a/Application/Admin/View/Attribute/attributeAdd.html
+++ b/Application/Admin/View/Attribute/attributeAdd.html
@@ -26,7 +26,7 @@
                 <tr>
                     <td class="label">所属类型:</td>
                     <td>
-                    <?php buildSelect('Type', 'type_id', 'id', 'type_name',I(get.type_id)); ?>
+                    <?php buildSelect('Type', 'type_id', 'id', 'type_name',I('get.type_id')); ?>
                     </td>
                 </tr>
             </table>
