修复修改属性允许修改的字段

--- a/Application/Admin/View/Goods/goodsAdd.html
+++ b/Application/Admin/View/Goods/goodsAdd.html
@@ -187,7 +187,7 @@ $("#tabbar-div p span").click(function(){
                         li += '<li>';
                         //如果这个属性类型时可选的就有一个＋
                         if (v.attr_type == '可选') {
-                            li += '<a href="">[+]</a>';
+                            li += '<a onclick="addNewAttr(this);" href="">[+]</a>';
                         }
                         //属性名称
                         li += v.attr_name + ' : ';
@@ -216,6 +216,10 @@ $("#tabbar-div p span").click(function(){
             $("#attr_list").html("");   //如果选的是情选择，就直接清空
         }
     });
+
+function addNewAttr(a) {
+    //$(a) -->把a转换成jquery中的对象，然后才能调用jquery中的方法
+}
 </script>
 
 
