--- a/Application/Admin/View/Goods/goodsEdit.html
+++ b/Application/Admin/View/Goods/goodsEdit.html
@@ -143,7 +143,7 @@
                     <td><ul id="attr_list">
                     <?php
                     $attrId = array();  //所有出现过的属性ID
-                    foreach ($gaData as $k => $v): 
+                    foreach ($attrData as $k => $v): 
                         //判断如果这个属性ID第一次出现就是+否则是-
                         if(in_array($v['attr_id'], $attrId))
                             $opt = '-';
