为属性提交做一个隐藏域

--- a/Application/Admin/View/Goods/goodsEdit.html
+++ b/Application/Admin/View/Goods/goodsEdit.html
@@ -153,6 +153,7 @@
                         }
                     ?>
                         <li>
+                            <input type="hidden" name="goods_attr_id[]" value="<?php echo $v['id']; ?>" />
                             <?php if($v['attr_type'] == '可选'): ?>
                                 <a onclick="addNewAttr(this)" href="#">[<?php echo $opt; ?>]</a>
                             <?php endif; ?>
@@ -319,6 +320,10 @@ function addNewAttr(a) {
     var li = $(a).parent();
     if ($(a).text() == '[+]') {
         var newLi = li.clone();
+        //去掉选中状态
+        newLi.find("option:selected").removeAttr("selected");
+        //把克隆出来的隐藏域里的ID清空
+        newLi.find("input[name='goods_attr_id[]']").val("");
         //+变-
         newLi.find("a").text('[-]');
         //新的放在li后面
