修改－号js代码

--- a/Application/Admin/View/Goods/goodsEdit.html
+++ b/Application/Admin/View/Goods/goodsEdit.html
@@ -329,8 +329,25 @@ function addNewAttr(a) {
         //新的放在li后面
         li.after(newLi);
     } 
-    else
-        li.remove();
+    else{
+        //先获取这个属性值的id
+        var gaid = li.find("input[name='goods_attr_id[]']").val();
+        //如果没用ID就直接删除，如果有ID说明时旧的属性值需要AJAX删除
+        if (gaid == '') {
+            li.remove();
+        } else {
+            if (confirm('如果删除了这个属性，那么相关的库存量数据也会被一起删除，确定要删除吗？')) {
+                $.ajax({
+                    type : 'GET',
+                    url : "<?php echo U('ajaxDelAttr?goods_id='.$data['id'], '', FALSE); ?>/gaid/"+gaid,
+                    success : function($data){
+                        //再把页面中的记录删除
+                        li.remove();
+                    }
+                });
+            }
+        }
+    }
     
 }
 </script>
