列表页显示库存量的html代码

--- a/Application/Admin/View/Goods/goods_number.html
+++ b/Application/Admin/View/Goods/goods_number.html
@@ -3,7 +3,10 @@
 <!-- 列表 -->
 <div class="list-div" id="listDiv">
 	<table cellpadding="3" cellspacing="1">
-		
+		<tr>
+			<th>库存量</th>
+			<th width="60">操作</th>
+		</tr>
 	</table>
 	
 </div>
