给库存量html增加宽度

--- a/Application/Admin/View/Goods/goods_number.html
+++ b/Application/Admin/View/Goods/goods_number.html
@@ -8,7 +8,7 @@
 			<?php foreach ($gaData as $k => $v): ?>
 				<th><?php echo $k; ?></th>
 			<?php endforeach; ?>
-			<th>库存量</th>
+			<th width="120">库存量</th>
 			<th width="60">操作</th>
 		</tr>
 	</table>
