修复商品列表库存量链接

--- a/Application/Admin/View/Goods/goodsList.html
+++ b/Application/Admin/View/Goods/goodsList.html
@@ -89,7 +89,7 @@
                 <td align="center"><?php echo $v['is_on_sale']; ?></td>
                 <td align="center"><?php echo $v['addtime']; ?></td>
                 <td align="center">
-                    <a href="<?php echo U('goods_number?id'.$v['id']); ?>">库存量</a>
+                    <a href="<?php echo U('goods_number?id='.$v['id']); ?>">库存量</a>
                     <a href="<?php echo U('goodsEdit?id='.$v['id']); ?>">修改</a>
                     <a onclick="return confirm('确定要删除吗?');" href="<?php echo U('delete?id='.$v['id']); ?>">删除</a>
                 </td>
