修复结束PHP结束符号

--- a/Application/Admin/View/Goods/goods_number.html
+++ b/Application/Admin/View/Goods/goods_number.html
@@ -20,7 +20,7 @@
 						<option value="">请选择</option>
 						<?php foreach ($v as $k1 => $v1): ?>
 							<option value=""><?php echo $v1['attr_value']; ?></option>
-						<?end foreach; ?>
+						<?php endforeach; ?>
 					</select>
 				</td>
 			<?php endforeach; ?>
