--- a/Application/Admin/View/Goods/goods_number.html
+++ b/Application/Admin/View/Goods/goods_number.html
@@ -36,7 +36,7 @@
 	
 </div>
 
-
+<script type="text/javascript" src="__PUBLIC__/umeditor1_2_2-utf8-php/third-party/jquery.min.js"></script>
 <script type="text/javascript">
 	function addNewTr(btn){
 		var tr = $(btn).parent().parent();
