--- a/Application/Admin/View/Goods/goods_number.html
+++ b/Application/Admin/View/Goods/goods_number.html
@@ -2,6 +2,7 @@
 
 <!-- 列表 -->
 <div class="list-div" id="listDiv">
+<form method="POST" action="__SELF__">
 	<table cellpadding="3" cellspacing="1">
 		<tr>
 			<!-- 循环输出属性 -->
@@ -33,7 +34,8 @@
 		</tr>
 
 	</table>
-	
+
+</form>	
 </div>
 
 <script type="text/javascript" src="__PUBLIC__/umeditor1_2_2-utf8-php/third-party/jquery.min.js"></script>
