删除商品库存量

--- a/Application/Admin/View/Goods/goods_number.html
+++ b/Application/Admin/View/Goods/goods_number.html
@@ -12,6 +12,7 @@
 			<th width="120">库存量</th>
 			<th width="60">操作</th>
 		</tr>
+		<?php foreach ($gnData as $k0 => $v0): ?>
 		<tr>
 			<?php
 			$gaCount = count($gaData);
@@ -19,15 +20,22 @@
 				<td>
 					<select name="goods_attr_id[]">
 						<option value="">请选择</option>
-						<?php foreach ($v as $k1 => $v1): ?>
-							<option value="<?php echo $v1['id']; ?>"><?php echo $v1['attr_value']; ?></option>
+						<?php foreach ($v as $k1 => $v1): 
+							$_attr = explode(',', $v0['goods_attr_id']);
+							if(in_array($v1['id'], $_attr))
+								$select = 'selected="selected"';
+							else
+								$select = '';
+						?>
+							<option <?php echo $select; ?> value="<?php echo $v1['id']; ?>"><?php echo $v1['attr_value']; ?></option>
 						<?php endforeach; ?>
 					</select>
 				</td>
 			<?php endforeach; ?>
-			<td><input type="text" name="goods_number[]" /></td>
-			<td><input type="button" value="+" onclick="addNewTr(this)" /></td>
+			<td><input type="text" name="goods_number[]" value="<?php echo $v0['goods_number']; ?>" /></td>
+			<td><input type="button" value="+" value="<?php echo $k0==0?'+':'-'; ?>" onclick="addNewTr(this)" /></td>
 		</tr>
+	<?php endforeach; ?>
 		<tr id="submit">
 			<td align="center" colspan="<?php echo $gaCount+2; ?>"><input type="submit" value="提交" />
 			</td>
