角色表的CRUD操作

--- a/Application/Admin/View/Role/roleAdd.html
+++ b/Application/Admin/View/Role/roleAdd.html
@@ -9,12 +9,10 @@
     </div>
     <div id="tabbody-div">
         <form enctype="multipart/form-data" action="__SELF__" method="post">
-        <input type="hidden" name="id" value="<?php echo $data['id']; ?>" />
             <table width="90%" id="general-table" align="center">
                 <tr>
-                    <td class="label">类型名称：</td>
-                    <td><input type="text" name="type_name" size="60" value="<?php echo $data['type_name']; ?>" />
-                    <span class="require-field">*</span></td>
+                    <td class="label">用户名字:</td>
+                    <td><input type="text" name="role_name" size="30" /></td>
                 </tr>
             </table>
             <div class="button-div">
@@ -24,4 +22,5 @@
         </form>
     </div>
 </div>
+
 </html>
