--- a/Application/Admin/View/Role/roleEdit.html
+++ b/Application/Admin/View/Role/roleEdit.html
@@ -12,17 +12,8 @@
         <input type="hidden" name="id" value="<?php echo $data['id']; ?>" />
             <table width="90%" id="general-table" align="center">
                 <tr>
-                    <td class="label">级别名称：</td>
-                    <td><input type="text" name="level_name" size="20" value="<?php echo $data['level_name']; ?>" />
-                    <span class="require-field">*</span></td>
-                </tr>
-                <tr>
-                    <td class="label">积分下限：</td>
-                    <td><input type="text" name="jifen_bottom" size="20" value="<?php echo $data['jifen_bottom']; ?>" /></td>
-                </tr>
-                <tr>
-                    <td class="label">积分上限：</td>
-                    <td><input type="text" name="jifen_top" size="20" value="<?php echo $data['jifen_top']; ?>" /></td>
+                    <td class="label">用户名：</td>
+                    <td><input type="text" name="role_name" size="20" value="<?php echo $data['role_name']; ?>" /></td>
                 </tr>
             </table>
             <div class="button-div">
