--- a/Application/Admin/View/Role/roleList.html
+++ b/Application/Admin/View/Role/roleList.html
@@ -6,15 +6,13 @@
         <table cellpadding="3" cellspacing="1">
             <tr>
                 <th>用户名</th>
-                <th>密码</th>
                 <th>操作</th>
             </tr>
             <?php foreach($data as $k => $v): ?>
             <tr class="tron">
-                <td align="center"><?php echo $v['username'] ?></td>
-                <td align="center"><?php echo $v['password']; ?></td>
+                <td align="center"><?php echo $v['role_name'] ?></td>
                 <td align="center">
-                    <a href="<?php echo U('adminEdit?id='.$v['id']); ?>">修改</a>
+                    <a href="<?php echo U('roleEdit?id='.$v['id']); ?>">修改</a>
                     <a onclick="return confirm('确定要删除吗？');" href="<?php echo U('delete?id='.$v['id']); ?>">删除</a>
                 </td>
             </tr>
