用户添加权限并显示权限

--- a/Application/Admin/View/Privilege/privilegeEdit.html
+++ b/Application/Admin/View/Privilege/privilegeEdit.html
@@ -18,7 +18,7 @@
                             else
                                 $select = '';
                         ?>
-                        <option <?php echo $select; ?> value="<?php echo $v['id']; ?>"><?php echo str_repeat('-', 8*$v['parent_id']) . $v['pri_name']; ?></option>
+                        <option <?php echo $select; ?> value="<?php echo $v['id']; ?>"><?php echo str_repeat('-', 8*$v['level']) . $v['pri_name']; ?></option>
                         <?php endforeach; ?>
                     </select>
                 </td>
