--- a/Application/Admin/View/Role/roleList.html
+++ b/Application/Admin/View/Role/roleList.html
@@ -6,11 +6,13 @@
         <table cellpadding="3" cellspacing="1">
             <tr>
                 <th>用户名</th>
+                <th>权限列表</th>
                 <th>操作</th>
             </tr>
             <?php foreach($data as $k => $v): ?>
             <tr class="tron">
-                <td align="center"><?php echo $v['role_name'] ?></td>
+                <td align="center"><?php echo $v['role_name']; ?></td>
+                <td align="center"><?php echo $v['pri_name']; ?></td>
                 <td align="center">
                     <a href="<?php echo U('roleEdit?id='.$v['id']); ?>">修改</a>
                     <a onclick="return confirm('确定要删除吗？');" href="<?php echo U('delete?id='.$v['id']); ?>">删除</a>
