管理员表和角色表多多关系初步完成

--- a/Application/Admin/View/Admin/adminList.html
+++ b/Application/Admin/View/Admin/adminList.html
@@ -6,13 +6,13 @@
         <table cellpadding="3" cellspacing="1">
             <tr>
                 <th>用户名</th>
-                <th>密码</th>
+                <th>角色列表</th>
                 <th>操作</th>
             </tr>
             <?php foreach($data as $k => $v): ?>
             <tr class="tron">
                 <td align="center"><?php echo $v['username'] ?></td>
-                <td align="center"><?php echo $v['password']; ?></td>
+                <td align="center"><?php echo $v['id']==1?'超级管理员':$v['role_name']; ?></td>
                 <td align="center">
                     <a href="<?php echo U('adminEdit?id='.$v['id']); ?>">修改</a>
                     <?php if($v['id'] > 1): ?>
