--- a/Application/Admin/View/Admin/adminAdd.html
+++ b/Application/Admin/View/Admin/adminAdd.html
@@ -11,6 +11,15 @@
         <form enctype="multipart/form-data" action="__SELF__" method="post">
             <table width="90%" id="general-table" align="center">
                 <tr>
+                    <td class="label">角色列表:</td>
+                    <td>
+                        <?php foreach ($roleData as $k => $v): ?>
+                            <input type="checkbox" name="role_id[]" value="<?php echo $v['id']; ?>" />
+                            <?php echo $v['role_name']; ?>
+                        <?php endforeach; ?>
+                    </td>
+                </tr>
+                <tr>
                     <td class="label">用户名:</td>
                     <td><input type="text" name="username" size="30" /></td>
                 </tr>
