--- a/Application/Admin/View/Index/menu.html
+++ b/Application/Admin/View/Index/menu.html
@@ -131,7 +131,7 @@ body {
               <?php echo $v['pri_name']; ?>
                 <ul>
                   <?php foreach ($v['children'] as $k1 => $v1): ?>
-                    <li class="ment-item"><a href="<?php echo U($v1['module_name'].'/'.$v1['controller_name'].'/'.$v1['action_name']); ?>" targer="main-frame"><?php echo $v1['pri_name']; ?></a></li>
+                    <li class="menu-item"><a href="<?php echo U($v1['module_name'].'/'.$v1['controller_name'].'/'.$v1['action_name']); ?>" target="main-frame"><?php echo $v1['pri_name']; ?></a></li>
                   <?php endforeach; ?>
                 </ul>
             </li>
