主页抢购商品

--- a/Application/Admin/View/Goods/goodsEdit.html
+++ b/Application/Admin/View/Goods/goodsEdit.html
@@ -111,6 +111,35 @@
                         <input type="radio" name="is_on_sale" value="否" <?php if($data['is_on_sale'] == '否') echo "checked='checked'"; ?> /> 否
                     </td>
                 </tr>
+                <tr>
+                    <td class="label">促销价格:</td>
+                    <td>
+                        价格:¥<input type="text" name="promote_price" size="8" value="<?php echo $data['promote_price']; ?>" />元
+                        开始时间:<input type="text" name="promote_start_date" id="promote_start_date" value="<?php echo $data['promote_start_date']; ?>" />
+                        结束时间:<input type="text" name="promote_end_date" id="promote_end_date" value="<?php echo $data['promote_end_date']; ?>" />
+                    </td>
+                </tr>
+                <tr>
+                    <td class="label">是否新品:</td>
+                    <td>
+                        <input type="radio" name="is_new" value="是" <?php if($data['is_new'] == '是') echo "checked='checked'"; ?> />是
+                        <input type="radio" name="is_new" value="否" <?php if($data['is_new'] == '否') echo "checked='checked'"; ?> />否
+                    </td>
+                </tr>
+                <tr>
+                    <td class="label">是否精品:</td>
+                    <td>
+                        <input type="radio" name="is_best" value="是" <?php if($data['is_best'] == '是') echo "checked='checked'"; ?> />是
+                        <input type="radio" name="is_best" value="否" <?php if($data['is_best'] == '否') echo "checked='checked'"; ?> />否
+                    </td>
+                </tr>
+                <tr>
+                    <td class="label">是否热卖:</td>
+                    <td>
+                        <input type="radio" name="is_hot" value="是" <?php if($data['is_hot'] == '是') echo "checked='checked'"; ?> />是
+                        <input type="radio" name="is_hot" value="否" <?php if($data['is_hot'] == '否') echo "checked='checked'"; ?> />否
+                    </td>
+                </tr>
             </table>
             <!-- 商品描述 -->
             <table style="display: none" width="90%" class="tab_table" align="center">
@@ -350,6 +379,21 @@ function addNewAttr(a) {
     }
     
 }
+</script>
+
+<!-- 引入时间插件 -->
+<script type="text/javascript" src="__PUBLIC__/datetimepicker/jquery-1.7.2.min.js"></script>
+<link rel="stylesheet" type="text/css" href="__PUBLIC__/datetimepicker/jquery-ui-1.9.2.custom.min.css" />
+<script type="text/javascript" charset="utf-8" src="__PUBLIC__/datetimepicker/jquery-ui-1.9.2.custom.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="__PUBLIC__/datetimepicker/datepicker-zh_cn.js"></script>
+<link rel="stylesheet" type="text/css" media="all" href="__PUBLIC__/datetimepicker/time/jquery-ui-timepicker-addon.min.css" />
+<script type="text/javascript" src="__PUBLIC__/datetimepicker/time/jquery-ui-timepicker-addon.min.js"></script>
+<script type="text/javascript" src="__PUBLIC__/datetimepicker/time/i18n/jquery-ui-timepicker-addon-i18n.min.js"></script>
+<script>
+    //添加时间插件
+    $.timepicker.setDefaults($.timepicker.regional['zh-CN']);   //设置使用中文
+    $("#promote_start_date").datetimepicker();
+    $("#promote_end_date").datetimepicker();
 </script>
 
 
