热卖，精品，新品商品

--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -155,9 +155,9 @@
 						<?php foreach($goods1 as $k => $v): ?>
 							<li>
 								<dl>
-									<dt><a href=""><img src="<?php echo $v['mig_logo']; ?>"></a></dt>
+									<dt><a href=""><?php showImage($v['mid_logo']); ?></a></dt>
 									<dd><a href=""><?php echo $v['goods_name']; ?></a></dd>
-									<dd><span>售价：</span><strong> ¥ <?php echo $v['promote_price']; ?></strong></dd>
+									<dd><span>售价：</span><strong> ¥ <?php echo $v['promote_price']; ?>元</strong></dd>
 								</dl>
 							</li>
 						<?php endforeach; ?>
@@ -168,27 +168,15 @@
 				<!-- 热卖商品 start -->
 				<div class="hot none">
 					<ul>
-						<li>
-							<dl>
-								<dt><a href=""><img src="__PUBLIC__/Home/images/hot1.jpg" alt="" /></a></dt>
-								<dd><a href="">索尼双核五英寸四核手机！</a></dd>
-								<dd><span>售价：</span><strong> ￥1386.00</strong></dd>
-							</dl>
-						</li>
-						<li>
-							<dl>
-								<dt><a href=""><img src="__PUBLIC__/Home/images/hot2.jpg" alt="" /></a></dt>
-								<dd><a href="">华为通话平板仅需969元！</a></dd>
-								<dd><span>售价：</span><strong> ￥969.00</strong></dd>
-							</dl>
-						</li>
-						<li>
-							<dl>
-								<dt><a href=""><img src="__PUBLIC__/Home/images/hot3.jpg" alt="" /></a></dt>
-								<dd><a href="">卡姿兰明星单品7件彩妆套装</a></dd>
-								<dd><span>售价：</span><strong> ￥169.00</strong></dd>
-							</dl>
-						</li>
+						<?php foreach($goods2 as $k => $v): ?>
+							<li>
+								<dl>
+									<dt><a href=""><?php showImage($v['mid_logo']); ?></a></dt>
+									<dd><a href=""><?php echo $v['goods_name']; ?></a></dd>
+									<dd><span>售价：</span><strong> ¥ <?php echo $v['shop_price']; ?>元</strong></dd>
+								</dl>
+							</li>
+						<?php endforeach; ?>
 					</ul>
 				</div>
 				<!-- 热卖商品 end -->
@@ -196,27 +184,15 @@
 				<!-- 推荐商品 atart -->
 				<div class="recommend none">
 					<ul>
-						<li>
-							<dl>
-								<dt><a href=""><img src="__PUBLIC__/Home/images/recommend1.jpg" alt="" /></a></dt>
-								<dd><a href="">黄飞红麻辣花生整箱特惠装</a></dd>
-								<dd><span>售价：</span><strong> ￥139.00</strong></dd>
-							</dl>
-						</li>
-						<li>
-							<dl>
-								<dt><a href=""><img src="__PUBLIC__/Home/images/recommend2.jpg" alt="" /></a></dt>
-								<dd><a href="">戴尔IN1940MW 19英寸LE</a></dd>
-								<dd><span>售价：</span><strong> ￥679.00</strong></dd>
-							</dl>
-						</li>
-						<li>
-							<dl>
-								<dt><a href=""><img src="__PUBLIC__/Home/images/recommend3.jpg" alt="" /></a></dt>
-								<dd><a href="">罗辑思维音频车载CD</a></dd>
-								<dd><span>售价：</span><strong> ￥24.80</strong></dd>
-							</dl>
-						</li>
+						<?php foreach($goods3 as $k => $v): ?>
+							<li>
+								<dl>
+									<dt><a href=""><?php showImage($v['mid_logo']); ?></a></dt>
+									<dd><a href=""><?php echo $v['goods_name']; ?></a></dd>
+									<dd><span>售价：</span><strong> ¥ <?php echo $v['shop_price']; ?>元</strong></dd>
+								</dl>
+							</li>
+						<?php endforeach; ?>
 					</ul>
 				</div>
 				<!-- 推荐商品 end -->
@@ -224,27 +200,15 @@
 				<!-- 新品上架 start-->
 				<div class="new none">
 					<ul>
-						<li>
-							<dl>
-								<dt><a href=""><img src="__PUBLIC__/Home/images/new1.jpg" alt="" /></a></dt>
-								<dd><a href="">E路航T70超薄GPS 7寸大屏！</a></dd>
-								<dd><span>售价：</span><strong> ￥369.00</strong></dd>
-							</dl>
-						</li>
-						<li>
-							<dl>
-								<dt><a href=""><img src="__PUBLIC__/Home/images/new2.jpg" alt="" /></a></dt>
-								<dd><a href="">乐和居 爆品 特价疯狂抢</a></dd>
-								<dd><span>售价：</span><strong> ￥2799.00</strong></dd>
-							</dl>
-						</li>
-						<li>
-							<dl>
-								<dt><a href=""><img src="__PUBLIC__/Home/images/new3.jpg" alt="" /></a></dt>
-								<dd><a href="">北欧 套装 抄底再续最后几小时</a></dd>
-								<dd><span>售价：</span><strong> ￥999.00</strong></dd>
-							</dl>
-						</li>
+						<?php foreach($goods4 as $k => $v): ?>
+							<li>
+								<dl>
+									<dt><a href=""><?php showImage($v['mid_logo']); ?></a></dt>
+									<dd><a href=""><?php echo $v['goods_name']; ?></a></dd>
+									<dd><span>售价：</span><strong> ¥ <?php echo $v['shop_price']; ?>元</strong></dd>
+								</dl>
+							</li>
+						<?php endforeach; ?>
 					</ul>
 				</div>
 				<!-- 新品上架 end-->
